--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
 
-  background-color: black;
+  background-color: #000000;
   font-family:monospace;
 
 }
@@ -9,7 +9,7 @@ h1 {
 
   font-family: 'Fredericka the Great', cursive;
   font-size:100px;
-  color:white;
+  color:#ffffff;
 
 }
 
@@ -18,7 +18,7 @@ h1 {
 
   width:100%;
   height:100%;
-  background-color:white;
+  background-color:#ffffff;
 
 }
 
@@ -32,7 +32,7 @@ h1 {
   position: absolute;
   margin-left:380px;
   margin-top:30px;
-  box-shadow: 5px 5px 1px grey;
+  box-shadow: 5px 5px 1px #808080;
 
 }
 
@@ -53,7 +53,7 @@ h1 {
   margin-left:375px;
   border-radius:50%;
   background-color:#000080;
-  box-shadow: 5px 5px 1px grey;
+  box-shadow: 5px 5px 1px #808080;
 
 }
 
@@ -66,13 +66,13 @@ h1 {
 
 #display-container {
 
-  border: 1px solid black;
-  background-color:lightblue;
+  border: 1px solid #000000;
+  background-color:#ADD8E6;
   border-radius:15%;
   width:90%;
   margin:0 auto;
   margin-bottom:30px;
-  color:darkblue;
+  color:#00008B;
   font-family: 'Orbitron', sans-serif;
 
 }
@@ -85,7 +85,7 @@ h1 {
   margin-top:85px;
   padding-top:20px;
   border-radius:5%;
-  box-shadow: 15px 10px 5px grey;
+  box-shadow: 15px 10px 5px #808080;
 
 }
 
@@ -102,7 +102,11 @@ h1 {
   box-shadow: 0 9px #999;
 }
 
-.button:hover {background-color: #3e8e41}
+.button:hover {
+
+  background-color: #3e8e41
+
+}
 
 .button:active {
   background-color: #3e8e41;
@@ -114,7 +118,7 @@ h1 {
 
   width:50%;
   float:right;
-  background-color:black;
+  background-color:#000000;
 
 }
 
@@ -152,8 +156,8 @@ button {
   font-size:25px;
   width:100px;
   height:90px;
-  border:2px outset black;
-  color:black !important;
+  border:2px outset #000000;
+  color:#000000 !important;
   outline:none;
   border-radius:15%;
 
@@ -173,8 +177,8 @@ button {
   border-radius:5%;
   margin:50px 0px 30px 0px;
   background-color:rgba(255, 255, 255, 0.3);
-  border:1px solid white;
-  color:white;
+  border:1px solid #ffffff;
+  color:#ffffff;
   outline:none;
   text-shadow: 2px 2px 2px #000000;
 
@@ -218,7 +222,7 @@ button {
 .city {
 
   text-align: center;
-  color:white;
+  color:#ffffff;
   font-size:60px;
   text-shadow: 2px 2px 2px #000000;
 
@@ -227,7 +231,7 @@ button {
 .city-display p {
 
   text-align: center;
-  color:white;
+  color:#ffffff;
   font-size:40px;
   text-shadow: 2px 2px 2px #000000;
 
@@ -246,8 +250,8 @@ button {
 
 #increase {
 
-  background-color:lightgrey;
-  color:crimson !important;
+  background-color:#D3D3D3;
+  color:#DC143C !important;
   font-size: 40px;
   font-weight:bold;
 
@@ -255,7 +259,7 @@ button {
 
 #decrease {
 
-  background-color:lightgrey;
+  background-color:#D3D3D3;
   color:#6495ed !important;
   font-size: 40px;
   font-weight:bold;
@@ -263,9 +267,9 @@ button {
 }
 
 #reset {
-  background-color:lightgrey;
+  background-color:#D3D3D3;
   font-size: 40px;
-  color:darkgreen !important;
+  color:#006400 !important;
   width:160px;
 }
 
@@ -329,17 +333,17 @@ button {
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: #ffffff;
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: limegreen;
+  background-color: #32CD32;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px limegreen;
+  box-shadow: 0 0 1px #32CD32;
 }
 
 input:checked + .slider:before {
